<resources>
    <string name="app_name">Gues The Word LoL Edition</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_chose">Chose categories and time: </string>
    <string name="Abilities">Abilities</string>
    <string name="Champions">Champions</string>
    <string name="Competitive">Competitive</string>
    <string name="Game">Game</string>
    <string name="SummonerSpells">Summoner Spells</string>
    <string name="Items">Items</string>
    <string name="Monsters">Monsters</string>
    <string name="title_activity_game">Gess the words: </string>
    <string name="title_activity_result">Result: </string>
    <string name="Chose_category">Chose category</string>
    <string name="Start">Start</string>
    <string name="Sec30">30 second</string>
    <string name="Sec60">60 second</string>
    <string name="Sec90">90 second</string>
    <string name="Sec120">120 second</string>
    <string name="Back">Back</string>
    <string name="Chose_Time">Chose Time</string>
    <string name="Wrong">Wrong:</string>
    <string name="Correct">Correct:</string>
    <string name="Game_Timer">__</string>
    <string name="Game_Word">______________</string>
    <string name="Rules">Rules</string>
    <string name="Play">Play</string>
</resources>
