<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jovan.guesthewordloledition.ChoseActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/txtChoseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chose_category"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtChoseCategory"
        android:layout_alignParentLeft="true"
        android:id="@+id/radioGroup">

        <CheckBox
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Abilities"
            android:id="@+id/cBoxAbilities"
            android:buttonTintMode="src_over"
            android:buttonTint="#000000"
            android:shadowColor="#000000" />

        <CheckBox
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:buttonTint="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Champions"
            android:id="@+id/cBoxChampions"
            android:buttonTintMode="src_in" />

        <CheckBox
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:shadowColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Game"
            android:id="@+id/cBoxGame"
            android:buttonTintMode="src_atop" />

        <CheckBox
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:shadowColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SummonerSpells"
            android:id="@+id/cBoxSummonerSpells" />

        <CheckBox
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:shadowColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Items"
            android:id="@+id/cBoxItems" />

        <CheckBox
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:shadowColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monsters"
            android:id="@+id/cBoxMonsters" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:textSize="30sp"
        android:onClick="btwStartHandler"
        android:minWidth="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/lock_in" />

    <TextView
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:id="@+id/tvChoseTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chose_Time"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:layout_width= "wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChoseTime"
        android:layout_alignParentRight="true"
        >

        <RadioButton
            android:textColor="#FFFFFF"
            android:shadowColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sec30"
            android:id="@+id/rb30sec"
            android:buttonTint="#FFFFFF"/>

        <RadioButton
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sec60"
            android:id="@+id/rb60sec" />

        <RadioButton
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:shadowColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sec90"
            android:id="@+id/rb90sec" />

        <RadioButton
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:shadowColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sec120"
            android:id="@+id/rb120sec" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:textSize="30sp"
        android:onClick="btnBackHandler"
        android:minWidth="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/cancel" />

</RelativeLayout>
